--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "taraabarnet",
-  "name": "taraabarnet test",
+  "short_name": "logo",
+  "name": "logo test",
   "icons": [
     {
       "src": "favicon.ico",
